# dhruv-django

./: .gitignore  README.md
django_mcp_workshop/: .dockerignore  .env.example  .flake8  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
django_mcp_workshop/.cursor/rules/: api-response-rules.mdc  code-formatting-rules.mdc  django-development-rules.mdc  django-rest-api-development-rules-adnan.mdc  error-handling-rules.mdc
django_mcp_workshop/.cursor/rules/django/: django-project-setup-rules.mdc  testing-rules.mdc  type-hints-rules.mdc  url-routing-rules.mdc
django_mcp_workshop/core/: admin.py  exceptions.py  logging.py  middleware.py  models.py  permissions.py  responses.py  tests.py  utils.py  views.py
django_mcp_workshop/django_mcp_workshop/: asgi.py  settings.py  urls.py  wsgi.py
django_mcp_workshop/django_mcp_workshop/settings/: base.py  local.py  production.py
django_mcp_workshop/docs/: COMBINED_REQUIREMENT_AND_UI_DOCUMENTATION.md  TECHNICAL_DOCUMENT_US1_CREATE_TIME_LOG.md  TECHNICAL_DOCUMENT_US2_EDIT_TIME_LOG.md  TECHNICAL_DOCUMENT_US3_VIEW_TIME_LOGS_CALENDAR_ADD_EVENT.md  TECHNICAL_DOCUMENT_US4_FILTER_AND_SEARCH_EVENTS_ENTRIES.md  TECHNICAL_DOCUMENT_US5_MOVE_ENTRY_BETWEEN_COLUMNS.md
django_mcp_workshop/requirements/: base.txt  local.txt
django_mcp_workshop/time_log/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
django_mcp_workshop/time_log/migrations/: 0001_initial.py
